ansible/manifests/hubble-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: "nginx"
  rules:
    - host: hubble.k8s.internal
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
  tls:
    - hosts:
        - hubble.k8s.internal
      secretName: hubble-tls-secret
